The following changes were made in 4.6 since 4.5.3 release:
  ---
  * A few ANSI conformance fixes (thanks Richard Peng)
  
  * Performance optimization for string::reserve (thanks Marc)
	
  ---
	
  * icc patches applied (Thanks Blaine Kubesh)
	
  * _thread.c, _thread.h: merged thread redesign from CVS (thanks Petr Ovchenkov)
	
  ----
	
  * iostream.cpp, locale_impl.cpp : static initialization made robust for case of 
    dynamic loader circular depandancies (Thanks Alexey Sarytchev for the report)
	
  ----
	
  * _function.h : integration of a new workaround for mem_fun_* family 
                  for compiler having return void bug (Thanks Pavel Kuznetsov).

  * stl_solaris.h : v8plus compilation fix (Thanks Mukesh Kapoor)

  * num_put_float.cpp : FreeBSD fix 

  * _construct.h : fixed case for compilers with default integer
  constructor bug
	
  ---
	
  * fstream.cpp : text file stream position bug correction (thanks Christopher Kohlert)
  ---
  * _num_put.c : Correction of the display of the min 64 bits signed integer values
                 like numeric_limits<__int64>::min() on WIN32 for instance (thanks Anders Dalvander)
  ---
  * _num_put.c : Add of the '+' sign when requested for the unsigned integer display 
                 (thanks Francois Dumont)
  ---
  * debug : many missing iterator invalidation corrected (thanks Detlev V.Davidson and Francois Dumont)
  ---
  * _new.h : introduction of a new config compiler switch for those which do define
             bad_alloc but that do not throw it! (thanks ?)
  ---
  * _new.h : class nothrow_t changed to struct nothrow_t (Thanks Francois Dumont)
	---
	* _bvector.h : Addition of the |= and &= operator on the _Bit_reference struct (thanks Ed Rice)
	---
	* Performance bug in type_traits.h fixed (Thanks Francois Dumont)
	---
	* Added Linux spin lock code ()
	---
    * Added GCC-3.x configurations

	* Fixed HP aCC support

	* Added OpenWatcom support
	
	* version numbers bumped
